--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</p>
 	</div>
 
-	<a href="#" class="button" id="btn-download" download="RGB.png">Download</a>
+	<a href="#" class="button" id="btn-download" download="RGB.png">Save</a>
 
 	<script>
 
