pattern and text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>RGB</title>
+	<title>Specchio</title>
 	<link rel="stylesheet" href="main.css">
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com"> 
@@ -13,7 +13,7 @@
 <body>
 
 	<a class="index-btn" href="https://ixd-supsi.github.io/specchiodellemiebrame/">
-		<img src="assets/back_0.png">
+		<img src="assets/back.png">
 	</a>
 
 
@@ -22,21 +22,16 @@
 		RGB
 	</h1>
 
-	<h2>pixel:</h2>
+	
 
-	<p>
-		Unità minima convenzionale della superficie di un'immagine digitale. <br>
-		I pixel, disposti in modo da comporre una griglia fissa rettangolare, per la loro piccolezza e densità appaiono fusi in un'unica immagine.
-		Ad ogni pixel si associa una stringa di bit che contiene informazioni quali le coordinate di posizione nella griglia e il codice del colore.
-	</p>
+	<div>
+		<h3>pixel:</h3>
 
-	<div class="colore">
-		<h3>e se i colori <br> non avessero un colore?</h3> <br>
-		<img src="assets/r_5.png"> <p>Rosso</p>
-		<img src="assets/g_5.png"> <p>Verde</p>
-		<img src="assets/b_5.png"> <p>Blu</p>
-
-		
+		<p class="risoluzione">
+			Unità minima convenzionale della superficie di un'immagine digitale. <br>
+			I pixel, disposti in modo da comporre una griglia fissa rettangolare, per la loro piccolezza e densità appaiono fusi in un'unica immagine.
+			Ad ogni pixel si associa una stringa di bit che contiene informazioni quali le coordinate di posizione nella griglia e il codice del colore.
+		</p>
 	</div>
 
 	<div>
@@ -47,7 +42,16 @@
 		</p>
 	</div>
 
-	<a href="#" class="button" id="btn-download" download="RGB.png">Save</a>
+	<div class="colore">
+		<h3>e se i colori <br> non avessero un colore?</h3> <br>
+		<img src="assets/r_5.png"> <p>Rosso</p>
+		<img src="assets/g_5.png"> <p>Verde</p>
+		<img src="assets/b_5.png"> <p>Blu</p>
+
+		
+	</div>
+
+	<a href="#" class="button" id="btn-download" download="RGB.png">Download</a>
 
 	<script>
 
